--- a/src/app/comun/withMenu/opening/learn/learn.module.css
+++ b/src/app/comun/withMenu/opening/learn/learn.module.css
@@ -165,10 +165,24 @@
       margin-top: 0;
       display: flex;
       flex-direction: column;
+      padding-bottom: 80px;
     }
   
     .toggleMovimientosButton {
       display: none; /* ⬅️ NO mostramos el botón de desplegar movimientos */
+    }
+  }
+
+  @media (max-width: 1040px) {
+    .navigation {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .navigation button {
+      width: 80%;
+      font-size: 16px;
+      padding: 8px 16px;
     }
   }
   
@@ -176,18 +190,27 @@
     .reviewContainer {
       padding-left: 30px;
       align-items: center;
+      min-height: calc(100vh - 140px); 
+      height: 100%;
+      overflow-y: auto; 
+      padding-bottom: 100px;
     }
   
     .gameBody {
       flex-direction: column;
       align-items: center;
+      justify-content: center;
       gap: 20px;
     }
   
     .boardContainer {
       width: 90%;
       height: auto;
+      margin: 0 auto; /* Centra horizontalmente */
+      display: flex;
+      flex-direction: column;
       align-items: center;
+      justify-content: center;
     }
   
     .movesPanel {
@@ -201,6 +224,8 @@
     .movesPanel.visible {
       display: flex; /* Se muestra si está expandido */
       flex-direction: column;
+      max-height: 50vh;
+      overflow-y: auto;
     }
   
     .toggleMovimientosButton {
