--- a/src/app/comun/withMenu/opening/opening.module.css
+++ b/src/app/comun/withMenu/opening/opening.module.css
@@ -104,3 +104,38 @@
     font-size: 14px;
   }
   
+
+  
+@media (max-width: 1000px) {
+  .container {
+      margin-left: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-top: 100px;
+      width: 100%;
+  }
+
+  .title {
+    margin-left: 0;
+    font-size: 28px;
+    margin-bottom: 30px;
+  }
+
+  .aperturaBox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    width: 80%;
+    padding: 20px;
+    margin: 0 auto; /* Centra horizontalmente */
+    margin-bottom: 20px;
+  }
+  
+  .imagePlaceholder {
+    margin-bottom: 50px;
+  }
+  
+
+}
