--- a/src/app/comun/withMenu/rules/rules.module.css
+++ b/src/app/comun/withMenu/rules/rules.module.css
@@ -185,4 +185,30 @@
   color: white;
 }
 
+
+@media (max-width: 1000px) {
+  .container {
+      margin-left: 0;
+      width: 100%;
+      padding-top: 100px;
+      align-items: center;
+  }
+
+  .title {
+    margin-left: 0;
+    font-size: 28px;
+    margin-bottom: 10px;
+  }
+
+  .reglaBox {
+    width: 80%;
+    margin-left: 0;
+    padding: 20px;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+
+}
+
   
